# pyspect

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile
examples/: cdc24.ipynb  demo.ipynb  hj.ipynb  hj.py  levelset.py  odp.py  play.ipynb  play.py  sidewalk_demo.ipynb  sidewalk_demo_old.ipynb  sidewalk_navigation.ipynb
src/hj_reachability/: shapes.py  solver.py
src/hj_reachability/plotting/: __init__.py
src/hj_reachability/systems/: __init__.py  bicycle4d.py
src/odp/: shapes.py  solver.py
src/optimized_dp/: __init__.py  shapes.py  solver.py
src/optimized_dp/systems/: __init__.py  bicycle4d.py  bicycle5d.py
src/pyspect/: __init__.py  idict.py  impl.py  lang.py  rules.py  set.py  set_builder.py  spect.py  tlt.py
src/pyspect/langs/: base.py  ltl.py  propositional.py
src/pyspect/plotting/: matplotlib.py
