[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspect"
version = "0.0.0"
authors = [
  { name="Kaj Munhoz Arfvidsson", email="kajarf@kth.se" },
  { name="Frank Jiang", email="frankji@kth.se" },
]
description = "Python Specification and Control with Temporal Logic Trees"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
Repository = "https://github.com/kth-sml/pyspect.git"
Issues = "https://github.com/kth-sml/pyspect/issues"
